Copyright (C) 1998-2001 Wilson Snyder.
Copyright (C) 1992-1997 Digital Equipment Corportation.
See the end for copying conditions.

The contributors that suggested a given feature is shown in [].
	
This uses outline mode in Emacs.  See C-h m [M-x describe-mode].

* Changes in Dinotrace 9.1e  ***/2001

***	Allow 1-bit wide signals to have statenames.  [Dominik Strasser]


* Changes in Dinotrace 9.1d  5/24/2001

***	Fixed missing 0's in display of >64 bit numbers. [Amitvikram Rajkhowa]

***	Fixed stripping of characters after bus prefix.  [Steve Hoover]

* Changes in Dinotrace 9.1c  2/13/2001

***	Fixed Verilog reading ignoring the hiearchy separator. [Dominik Strasser]

* Changes in Dinotrace 9.1b  2/13/2001

****	Documentation updates.


* Changes in Dinotrace 9.1a  1/22/2001

**	Added analog waveform format.  [Dave Colson]
	Includes new Signal Waveform menu and signal_waveform command.


* Changes in Dinotrace 9.0m  11/21/2000

****	Fixed a bug reading compressed tempest on Digital UNIX. [Steve Hoover]


* Changes in Dinotrace 9.0l  8/30/2000

**	Added support for femtosecond Verilog timescales. [Derek Bosch]


* Changes in Dinotrace 9.0k  7/17/2000

****	Fixed bug with $comment after $enddefinitions. [Harunobu Miyashita]

****	Fixed Tempest reading signals over 128 bits. [Ta-Chung Chang]
	This bug was introduced in 9.0i.

****	Fixed portability bug with Value Examine showing 0s. [Ta-Chung Chang]

****	Fixed Verilog reading with large time intervals. [Matthias Wenzel]


* Changes in Dinotrace 9.0i  5/1/2000

**	Major speed improvement in reading Tempest traces.
	All trace formats now have less processing when building busses from
	individual bits. [Steve Hoover]

***	ASCII traces assume extra time so last line is not lost.
	ASCII traces which had timestamps would not show the last state of the
	bus, as Dinotrace did not guess at how long that last state was valid for.
	Now, it looks at the smallest time step in the trace, and uses that