@@ -11,6 +11,8 @@ This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
 ***	Allow 1-bit wide signals to have statenames.  [Dominik Strasser]
 
+***	Eliminate common prefix from postscript dumps.  [Dominik Strasser]
+
 
 * Changes in Dinotrace 9.1d  5/24/2001
 
